# UnitConverter

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
$userprofile/.vim.undodir/: D%%rust%UnitConverter%src%converter.rs  D%%rust%UnitConverter%src%main.rs  D%%rust%UnitConverter%src%units%length%conversions%for_cm.rs  D%%rust%UnitConverter%src%units%length%conversions%for_foot.rs  D%%rust%UnitConverter%src%units%length%conversions.rs  D%%rust%UnitConverter%src%units%length.rs  D%%rust%UnitConverter%tests%temperature_from_metric.rs  d%%rust%UnitConverter%src%interface.rs  d%%rust%UnitConverter%src%units%length%conversions%for_unitconatiner.rs  d%%rust%UnitConverter%src%units%length%conversions%for_unitcontainer.rs  d%%rust%UnitConverter%src%units%mass%conversions.rs  d%%rust%UnitConverter%src%units%mass.rs  d%%rust%UnitConverter%src%units%temperature%conversions.rs  d%%rust%UnitConverter%src%units%temperature.rs  d%%rust%UnitConverter%src%units.rs
src/: converter.rs  interface.rs  lib.rs  main.rs  units.rs
src/converter/: length.rs
src/units/: length.rs  mass.rs  speed.rs  temperature.rs  volume.rs
src/units/length/: conversions.rs
src/units/length/conversions/: for_cm.rs  for_foot.rs  for_inch.rs  for_km.rs  for_m.rs  for_mile.rs  for_mm.rs  (+2 more)
src/units/mass/: conversions.rs
src/units/speed/: conversions.rs
src/units/temperature/: conversions.rs
src/units/volume/: conversions.rs
tests/: length_all_from_meter.rs  length_from_metric.rs  length_tests.rs  mass_tests.rs  speed_tests.rs  temperature_from_metric.rs  temperature_tests.rs  volume_tests.rs
(+24 files in other folders)
