[package]
name = "unit_converter"
version = "0.1.0"
edition = "2021"
authors = ["LukasHuth"]
license-file = "LICENSE.txt"
description = "A library to convert different units"
repository = "https://github.com/LukasHuth/UnitConverter"
readme = "README.md"
keywords = ["converter","units"]

[lib]
name = "unit_converter_lib"
path = "src/lib.rs"

[[bin]]
name = "unit_converter_bin"
path = "src/main.rs"

[dependencies]
paste = "1.0.14"
seq-macro = "0.3.5"
